Source/JavaScriptCore/assembler/MacroAssemblerX86_64.h
@@ -115,7 +115,9 @@ public:
 
     Call call()
     {
+#ifndef NDEBUG
         DataLabelPtr label = moveWithPatch(TrustedImmPtr(0), scratchRegister);
+#endif
         Call result = Call(m_assembler.call(scratchRegister), Call::Linkable);
         ASSERT(differenceBetween(label, result) == REPTACH_OFFSET_CALL_R11);
         return result;
@@ -123,7 +125,9 @@ public:
 
     Call tailRecursiveCall()
     {
+#ifndef NDEBUG
         DataLabelPtr label = moveWithPatch(TrustedImmPtr(0), scratchRegister);
+#endif
         Jump newJump = Jump(m_assembler.jmp_r(scratchRegister));
         ASSERT(differenceBetween(label, newJump) == REPTACH_OFFSET_CALL_R11);
         return Call::fromTailJump(newJump);
@@ -132,7 +136,9 @@ public:
     Call makeTailRecursiveCall(Jump oldJump)
     {
         oldJump.link(this);
+#ifndef NDEBUG
         DataLabelPtr label = moveWithPatch(TrustedImmPtr(0), scratchRegister);
+#endif
         Jump newJump = Jump(m_assembler.jmp_r(scratchRegister));
         ASSERT(differenceBetween(label, newJump) == REPTACH_OFFSET_CALL_R11);
         return Call::fromTailJump(newJump);
